--- a/app/src/main/res/layout/music_activity_main.xml
+++ b/app/src/main/res/layout/music_activity_main.xml
@@ -7,51 +7,54 @@
     android:layout_height="match_parent">
 
 
-
-
-
     <RelativeLayout
         android:id="@+id/art_holder"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/top_art_height">
+        android:layout_width="294dp"
+        android:layout_height="@dimen/top_art_height"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <ImageView
             android:id="@+id/art_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:adjustViewBounds="true"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-
-            android:src="@drawable/ic_headset"/>
 
 
+            android:src="@drawable/ic_headset" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/top_art_height"
+        android:layout_toRightOf="@id/art_holder">
         <!--Gesture 안내 표시용 Layout-->
         <LinearLayout
             android:id="@+id/maingesturelinearlayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_height="@dimen/top_art_height"
 
-            android:orientation="horizontal"
-            android:layout_below="@id/art_image"
+
+            android:layout_gravity="bottom"
+            android:orientation="vertical"
             android:weightSum="12">
 
             <LinearLayout
                 android:id="@+id/gesturelinearlayout1"
-                android:layout_width="0dp"
+                android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_gravity="bottom"
+
                 android:layout_weight="3"
                 android:background="#ffffff"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:weightSum="10"
-                android:layout_marginLeft="50dp">
+                android:weightSum="10">
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="0dp"
+                    android:layout_height="2dp"
                     android:layout_weight="7"
                     android:src="@drawable/gesture_fist" />
 
@@ -60,26 +63,26 @@
                     android:layout_height="0dp"
                     android:layout_weight="3"
                     android:gravity="center"
-                    android:textSize="9sp"
-                    android:text="play/pause" />
+                    android:text="play/pause"
+                    android:textSize="9sp" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/gesturelinearlayout2"
-                android:layout_width="0dp"
+                android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_gravity="bottom"
+
                 android:layout_weight="3"
                 android:background="#ffffff"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:weightSum="10"
-                android:layout_marginLeft="50dp">
+                android:weightSum="10">
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="0dp"
+                    android:layout_height="2dp"
                     android:layout_weight="7"
                     android:src="@drawable/gesture_spread" />
 
@@ -88,22 +91,22 @@
                     android:layout_height="0dp"
                     android:layout_weight="3"
                     android:gravity="center"
-                    android:textSize="9sp"
-                    android:text="previous" />
+                    android:text="previous"
+                    android:textSize="9sp" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/gesturelinearlayout3"
-                android:layout_width="0dp"
+                android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_gravity="bottom"
+
                 android:layout_weight="3"
                 android:background="#ffffff"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:weightSum="10"
-                android:layout_marginLeft="50dp">
+                android:weightSum="10">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -116,14 +119,12 @@
                     android:layout_height="0dp"
                     android:layout_weight="3"
                     android:gravity="center"
-                    android:textSize="9sp"
-                    android:text="next" />
+                    android:text="next"
+                    android:textSize="9sp" />
 
             </LinearLayout>
 
         </LinearLayout>
-
-
 
 
     </RelativeLayout>
