--- a/app/src/main/res/layout/fragment_tab_fragment3.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment3.xml
@@ -25,9 +25,11 @@
             <TextView
                 android:id="@+id/Text_tutorial"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+
+                android:layout_height="80dp"
                 android:layout_marginBottom="20dp"
-                android:text="환영합니다. 이곳은 myo의 인식률을 높이기 위한 Adapter를 하는 장소입니다." />
+                android:textSize="16dp"
+                android:text="환영합니다. 이곳은 myo의 인식률을 높이기 위한 Adapter를 하는 장소입니다.\n수행하고자 하는 항목의 타이틀을 클릭해서 설명을 보세요" />
 
 
             <TextView
@@ -139,11 +141,11 @@
                 android:text="Data Saving"
                 android:textAlignment="center"
                 android:textSize="15dp"/>
+
             <Button
                 android:id="@+id/btn_Save"
-                android:layout_width="50dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:background="@drawable/imgbtn_rect_state"
                 android:layout_marginLeft="20dp"
                 android:text="Save"
@@ -166,6 +168,7 @@
                 android:layout_width="0dp"
                 android:layout_height="80dp"
                 android:layout_weight="10">
+
 
             </NumberPicker>
             <ImageView
