--- a/app/src/main/res/layout/fragment_tab_fragment3.xml
+++ b/app/src/main/res/layout/fragment_tab_fragment3.xml
@@ -3,145 +3,188 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/title_margin"
     tools:context=".TabFragment3">
 
-    <!-- TODO: Update blank fragment layout -->
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/main_linearlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/title_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
-
-        <LinearLayout
-            android:id="@+id/toptopLinearLayout"
+        android:layout_height="match_parent"
+        android:weightSum="10"
+        android:orientation="vertical"
+        android:layout_marginTop="55dp"
+        android:layout_marginBottom="50dp">
+        <RelativeLayout
+            android:id="@+id/showRelativelayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:orientation="vertical">
-
+            android:layout_weight="5.5">
             <TextView
-                android:id="@+id/Text_tutorial"
+                android:id="@+id/textView_tutorial"
                 android:layout_width="match_parent"
-
                 android:layout_height="80dp"
-                android:layout_marginBottom="20dp"
+
                 android:textSize="16dp"
                 android:text="환영합니다. 이곳은 myo의 인식률을 높이기 위한 Adapter를 하는 장소입니다.\n수행하고자 하는 항목의 타이틀을 클릭해서 설명을 보세요" />
+            <LinearLayout
+                android:id="@+id/topLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView_tutorial"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="10dp"
+                android:visibility="gone">
 
+                <NumberPicker
+                    android:id="@+id/remove_gestureNumberPicker"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="15">
+
+                </NumberPicker>
+
+                <Button
+                    android:id="@+id/btnRemove"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/imgbtn_rect_state"
+                    android:text="Remove"
+                    android:textAllCaps="false"
+                    android:layout_weight="10"/>
+
+                <Button
+                    android:id="@+id/btnTutorial"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/imgbtn_rect_state"
+                    android:text="Tutorial"
+                    android:textAllCaps="false"
+                    android:layout_weight="10"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/AdaptiveNumberPickerLinearLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_below="@+id/textView_tutorial"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="10dp"
+                android:visibility="gone">
+
+                <NumberPicker
+                    android:id="@+id/AdapterNumberPicker"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="30dp">
+
+                </NumberPicker>
+
+                <Button
+                    android:id="@+id/btn_Sync"
+                    android:layout_width="90dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/imgbtn_rect_state"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginLeft="60dp"
+                    android:text="Sync"
+                    android:textAllCaps="false" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/SelectLinearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView_tutorial"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="10dp"
+                android:visibility="gone"
+                >
+
+                <NumberPicker
+                    android:id="@+id/gestureNumberPicker"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    android:layout_weight="10">
+
+
+                </NumberPicker>
+                <ImageView
+                    android:id="@+id/saveGesture_Image"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/gesture_1_nb"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"
+                    />
+                <View
+                    android:id="@+id/view1"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"/>
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/cnt_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"/>
+
+                <View
+                    android:id="@+id/view3"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/cnt_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:text="Hello"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"/>
+
+                <View
+                    android:id="@+id/view4"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/cnt_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:text="Hello"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"/>
+
+                <View
+                    android:id="@+id/view5"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="@dimen/cnt_margin"
+                    android:background="@drawable/imgbtn_default"
+                    android:text="Hello"
+                    android:textColor="@android:color/black"
+                    android:layout_weight="10"/>
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/Text_first"
-                android:layout_width="200dp"
+                android:id="@+id/gestureTextView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/editbox_transparent_frame"
-                android:text="File Delete / Tutorial"
-                android:textAlignment="center"
-                android:textSize="15dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/topLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/toptopLinearLayout"
-            android:layout_marginBottom="10dp">
-
-            <NumberPicker
-                android:id="@+id/remove_gestureNumberPicker"
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="15">
-
-            </NumberPicker>
-
-            <Button
-                android:id="@+id/btnRemove"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/imgbtn_rect_state"
-                android:text="Remove"
-                android:textAllCaps="false"
-                android:layout_weight="10"/>
-
-            <Button
-                android:id="@+id/btnTutorial"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/imgbtn_rect_state"
-                android:text="Tutorial"
-                android:textAllCaps="false"
-                android:layout_weight="10"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/AdaptiveSavingLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/topLinearLayout"
-            >
-
-            <TextView
-                android:id="@+id/Text_second"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/editbox_transparent_frame"
-                android:text="Data Percent"
-                android:textAlignment="center"
-                android:textSize="15dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/AdaptiveNumberPickerLinearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="90dp"
-            android:layout_below="@+id/AdaptiveSavingLinearLayout"
-            android:layout_marginBottom="20dp">
-
-            <NumberPicker
-                android:id="@+id/AdapterNumberPicker"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="30dp">
-
-            </NumberPicker>
-
-            <Button
-                android:id="@+id/btn_Sync"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/imgbtn_rect_state"
-                android:layout_marginTop="25dp"
-                android:layout_marginLeft="60dp"
-                android:text="Sync"
-                android:textAllCaps="false" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/DataSavingLinearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/AdaptiveNumberPickerLinearLayout"
-            android:layout_marginTop="10dp">
-
-            <TextView
-                android:id="@+id/Text_third"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/editbox_transparent_frame"
-                android:text="Data Saving"
-                android:textAlignment="center"
-                android:textSize="15dp"/>
-
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/SelectLinearLayout"
+                android:text="Connect Myo "
+                android:textSize="16dp"
+                android:visibility="gone"/>
             <Button
                 android:id="@+id/btn_Save"
                 android:layout_width="90dp"
@@ -149,129 +192,36 @@
                 android:background="@drawable/imgbtn_rect_state"
                 android:layout_marginLeft="20dp"
                 android:text="Save"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:layout_below="@+id/SelectLinearLayout"
+                android:layout_toRightOf="@+id/gestureTextView"
+                android:visibility="gone"/>
+        </RelativeLayout>
 
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/SelectLinearLayout"
+        <Button
+            android:id="@+id/btn_saveScroll"
+            android:text="Data Save"
+            android:textColor="@color/BackgroundColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/DataSavingLinearLayout"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal">
-
-            <NumberPicker
-                android:id="@+id/gestureNumberPicker"
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="10">
-
-
-            </NumberPicker>
-            <ImageView
-                android:id="@+id/saveGesture_Image"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:src="@drawable/gesture_1_nb"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:background="@drawable/imgbtn_default"
-                android:textColor="@android:color/black"
-                android:layout_weight="10"
-                />
-            <View
-                android:id="@+id/view1"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:background="@drawable/imgbtn_default"
-                android:textColor="@android:color/black"
-                android:layout_weight="10"/>
-
-            <View
-                android:id="@+id/view2"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/cnt_margin"
-                android:background="@drawable/imgbtn_default"
-                android:textColor="@android:color/black"
-                android:layout_weight="10"/>
-
-            <View
-                android:id="@+id/view3"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/cnt_margin"
-                android:background="@drawable/imgbtn_default"
-                android:text="Hello"
-                android:textColor="@android:color/black"
-                android:layout_weight="10"/>
-
-            <View
-                android:id="@+id/view4"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/cnt_margin"
-                android:background="@drawable/imgbtn_default"
-                android:text="Hello"
-                android:textColor="@android:color/black"
-                android:layout_weight="10"/>
-
-            <View
-                android:id="@+id/view5"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/cnt_margin"
-                android:background="@drawable/imgbtn_default"
-                android:text="Hello"
-                android:textColor="@android:color/black"
-                android:layout_weight="10"/>
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/BottomLinearLayout"
+            android:layout_weight="1.5"
+            android:background="@color/FontColor"/>
+        <Button
+            android:id="@+id/btn_syncScroll"
+            android:text="Data Sync"
+            android:textColor="@color/BackgroundColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/SelectLinearLayout"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            android:weightSum="4">
-
-            <TextView
-                android:id="@+id/gestureTextView"
-                android:layout_width="240dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:text="Connect Myo "
-                android:textSize="16dp" />
-
-
-
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/RawLinearLayout"
-            android:layout_below="@+id/BottomLinearLayout"
+            android:layout_weight="1.5"
+            android:background="#9F9B9A"/>
+        <Button
+            android:id="@+id/btn_removeScroll"
+            android:text="Remove Data"
+            android:textColor="@color/BackgroundColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/emgDataTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/editbox_transparent_frame"
-                android:text="Myo Status"
-                android:textSize="15dp" />
-        </LinearLayout>
-    </RelativeLayout>
+            android:layout_weight="1.5"
+            android:background="@color/AccentColor"/>
+    </LinearLayout>
 
 </FrameLayout>
